SubBt/force-app/main/default/objects/Quote__c/fields/To_Emails__c.field-meta.xml
<CustomField>
    <fullName>To_Emails__c</fullName>
    <label>To Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>