SubBt/force-app/main/default/objects/Quote__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <inlineHelpText>Rollup of Total Cost from Quote Line Items.</inlineHelpText>
    <label>Total Quote Costs</label>
    <summarizedField>Quote_Item__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Quote_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Accept</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>