SubBt/force-app/main/default/objects/Quote__c/fields/Total_Customer_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Quote_Amount__c</fullName>
    <formula>( Customer_Quote_Amount__c+ ( Customer_Quote_Amount__c* Tax__c )) + Shipping_and_Handling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Customer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>