SubBt/force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auto_Number1__c</columns>
    <columns>Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Aging__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Quote_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>