SubBt/force-app/main/default/objects/Quote__c/listViews/All_My_Open_Quotes.listView-meta.xml
<ListView>
    <fullName>All_My_Open_Quotes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready for Approval</value>
    </filters>
    <label>All My Open Quotes</label>
</ListView>